--- a/examples/StreetlightsAPI/StreetlightsAPI.csproj
+++ b/examples/StreetlightsAPI/StreetlightsAPI.csproj
@@ -21,13 +21,19 @@
     <NoWarn>1701;1702;1591</NoWarn>
   </PropertyGroup>
 
-  <!-- Get the latest local build nuget package from source code, from the local nuget packages source as configured in nuget.config -->
+  <!-- Get the latest local build nuget package from source code, from the local nuget packages source as configured in nuget.config 
+       999.* are the 'special' version number for local builds -->
   <ItemGroup Condition=" '$(Configuration)' == 'Debug' ">
-    <PackageReference Include="AsyncAPI.Saunter.Generator.Build" Version="0.0.999-*">
+    <PackageReference Include="AsyncAPI.Saunter.Generator.Build" Version="999.*">
       <PrivateAssets>all</PrivateAssets>
       <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
     </PackageReference>
   </ItemGroup>
+  <!-- Special args for the AsyncAPI.Generator.Cli tool used by local build AsyncAPI.Generator.Build nuget package, 
+       do not use in normal usage scenarios, this is to use a local build version -->
+  <PropertyGroup Condition=" '$(Configuration)' == 'Debug' ">
+    <AsyncAPICliToolArgs>--version "999.*" --add-source "$([System.IO.Path]::GetFullPath($(MSBuildThisFileDirectory)../../local-nuget-source))"</AsyncAPICliToolArgs>
+  </PropertyGroup>
 
   <!-- For release: use a real published nuget package -->
   <ItemGroup Condition=" '$(Configuration)' == 'Release' ">
