--- a/src/Saunter/Saunter.csproj
+++ b/src/Saunter/Saunter.csproj
@@ -58,5 +58,9 @@
       <Link>UI\package.json</Link>
     </None>
   </ItemGroup>
-  
+
+    <ItemGroup>
+        <InternalsVisibleTo Include="Saunter.Tests"/>
+    </ItemGroup>
+    
 </Project>
