--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -21,8 +21,14 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v2
-      - name: setup dotnet
-        uses: ./.github/dotnet
+
+      # bug of format tool in dotnet 6
+      - name: setup
+        id: setup-dotnet
+        uses: actions/setup-dotnet@v1
+        with:
+          dotnet-version: "8.0.300"
+
       - name: dotnet restore
         run: dotnet restore *sln
       - name: dotnet format check
