#196 add unitTests for tofile

--- a/.gitignore
+++ b/.gitignore
@@ -206,6 +206,7 @@ PublishScripts/
 # NuGet v3's project.json files produces more ignorable files
 *.nuget.props
 *.nuget.targets
+dotnet-tools.json
 
 # Microsoft Azure Build Output
 csx/
