--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -16,7 +16,7 @@ jobs:
         # Gets the numeric version from a tag (e.g. v1.2.3 -> 1.2.3)
         run: echo "RELEASE_VERSION=${GITHUB_REF#refs/tags/v}" >> $GITHUB_ENV
       - name: Create Nuget package
-        run: dotnet pack ./src/Saunter/Saunter.csproj --configuration Release -p:Version="$RELEASE_VERSION" --output ./build
+        run: dotnet pack --configuration Release -p:Version="$RELEASE_VERSION" --output ./build
       - name: Push Nuget package to Nuget.org
         env:
           NUGET_API_KEY: ${{ secrets.NUGET_API_KEY }}
