--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -14,7 +14,9 @@ jobs:
       - uses: actions/checkout@v2
       - name: setup build
         uses: ./.github/npm
-      - name: Run dotnet build
+      - name: Run dotnet build src
+        run: dotnet build ./src/Saunter-src.slnf --configuration Debug
+      - name: Run dotnet build all
         run: dotnet build --configuration Debug
 
   fmt:
@@ -24,7 +26,7 @@ jobs:
       - name: setup dotnet
         uses: ./.github/dotnet
       - name: dotnet format check
-        run: dotnet format --verify-no-changes *.sln
+        run: dotnet format --verify-no-changes --no-restore *.sln
         env:
           PATH: ${{ github.env.PATH }}:/home/runner/.dotnet/tools
 
@@ -35,4 +37,4 @@ jobs:
       - name: setup build
         uses: ./.github/npm
       - name: unit test
-        run: dotnet test --configuration Debug
+        run: dotnet test --no-build --configuration Debug
